--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
     --gray-light: #f8f8f8;
     --gray-dark: #555555;
 
-    --background: #e60000;
+    --background: #000000;
     --card-bg: #ffffff;
     --text: #ffffff;
 
@@ -35,9 +35,9 @@
 }
 
 body {
-    background-color: var(--background);
-    color: var(--text);
-    line-height: 1.6;
+  background-color: var(--background);
+  color: var(--text);
+  line-height: 1.6;
 }
 
 .header {
