--- a/style.css
+++ b/style.css
@@ -111,12 +111,13 @@ main {
 }
 
 h2 {
-    color: var(--dark);
+    color: var(--text); 
     margin-bottom: 1.5rem;
     font-weight: 700;
     position: relative;
     padding-bottom: 0.5rem;
 }
+
 
 h2::after {
     content: '';
