--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
     --gray-light: #f8f8f8;
     --gray-dark: #555555;
 
-    --background: #000000;
+    --background: #f2f2f2;
     --card-bg: #ffffff;
     --text: #ffffff;
 
